--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="utf-8">
     <title>ZDK - Personal Portfolio HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -54,17 +55,17 @@
             <div class="navbar-nav ms-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#skill" class="nav-item nav-link">Skills</a>
-                <a href="#service" class="nav-item nav-link">Services</a>
+                <a href="#skill" class="nav-item nav-link">Character</a>
+                <!-- <a href="#service" class="nav-item nav-link">Services</a> -->
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
                 <h1 class="text-primary fw-bold m-0">LaniKuhhh</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
-                <a href="#project" class="nav-item nav-link">Projects</a>
-                <a href="#team" class="nav-item nav-link">Team</a>
-                <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#project" class="nav-item nav-link">Gallery</a>
+                <a href="#team" class="nav-item nav-link">Friends</a>
+                <a href="#testimonial" class="nav-item nav-link">Greeting</a>
+                <!-- <a href="#contact" class="nav-item nav-link">Contact</a> -->
             </div>
         </div>
     </nav>
@@ -131,30 +132,26 @@
                         </div>
                         <h3 class="lh-base mb-0">telah menjadi perempuan yang salihah dan baik</h3>
                     </div>
-                    <p class="mb-4">Di matamu, terbitlah senja,
-                        Cintamu, nyanyian terindah.
-                        Ketika kau tersenyum, bunga-bunga mekar,
-                        Dalam pelukanmu, dunia terasa sempurna.
-                        Kau adalah cinta sejati yang abadi,
-                        Hidupku hanya indah bersamamu, selamanya.</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Baik Hatinya</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Cantik Parasnya</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Senyumnya yang bikin candu</p>
-                    <a class="btn btn-danger py-3 px-5 mt-3" id="loveButton" href="">Klik Aku ♥</a>
-                    <a class="btn btn-danger py-3 px-5 mt-3" id="loveText" href=""></a>
-                </div>
+    <p class="mb-4">Di matamu, terbitlah senja, Cintamu, nyanyian terindah. Ketika kau tersenyum, bunga-bunga mekar, Dalam pelukanmu, dunia terasa sempurna. Kau adalah cinta sejati yang abadi, Hidupku hanya indah bersamamu, selamanya.</p>
+    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Baik Hatinya</p>
+    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Cantik Parasnya</p>
+    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Senyumnya yang bikin candu</p>
+    <a class="btn btn-danger py-3 px-5 mt-3" id="loveButton" href="">Klik Aku ♥</a>
+    <p class="btn btn-danger py-3 px-5 mt-3" id="loveText" style="display: none;"></p>
+</div>
 
-                <script>
-                    const loveButton = document.getElementById('loveButton');
-                    const loveText = document.getElementById('loveText');
-                    let hitungan = 0;
+<script>
+    const loveButton = document.getElementById('loveButton');
+    const loveText = document.getElementById('loveText');
+    let hitungan = 0;
 
-                    loveButton.addEventListener('click', function(event) {
-                        event.preventDefault();
-                        hitungan++;
-                        loveText.innerText = `Lani Cantik ${hitungan}x`;
-                    });
-                </script>
+    loveButton.addEventListener('click', function(event) {
+        event.preventDefault();
+        hitungan++;
+        loveText.style.display = 'block';
+        loveText.innerText = `Lani Cantik ${hitungan}x`;
+    });
+</script>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
                         <div class="col-sm-6">
@@ -165,10 +162,10 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0"></h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">9999</h2>
+                        <h5 class="border-end pe-3 me-3 mb-0">Friends Fortunate</h5>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">152</h2>
                     </div>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
+                    <p class="mb-4">Teman-teman lani yang beruntung, terima kasih telah menjadi teman sejati dalam segala hal. Hidup ini lebih indah berkat kehadiran kalian. Semoga persahabatan kalian terus berlangsung.</p>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
                         <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">9999</h2>
@@ -186,9 +183,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="display-5 mb-5">Tentang diri Lani</h1>
-                    <p class="mb-4">Apa yang saya tulis adalah berdasarkan pengalaman pribadi saya yang saya rasain perilaku, tingkah laku, dan lain lain dalam diri lani yang saya rangkum dalam persen %.</p>
-                    <h3 class="mb-4">Lani dalam %</h3>
+                    <h1 class="display-5 mb-5">Lani Nature</h1>
+                    <p class="mb-4">Apa yang saya tulis adalah berdasarkan pengalaman pribadi saya, yang saya rasain perilaku, tingkah laku, dan lain lain dalam diri lani yang saya rangkum.</p>
+                    <h3 class="mb-4">Nature %</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="skill mb-4">
@@ -215,7 +212,7 @@
                                     <h6 class="font-weight-bold">100000%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100000" aria-valuemin="0" aria-valuemax="100000"></div>
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
@@ -226,12 +223,12 @@
                                     <h6 class="font-weight-bold">100000%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100000" aria-valuemin="0" aria-valuemax="100000"></div>
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Sombong</h6>
+                                    <h6 class="font-weight-bold">Centil</h6>
                                     <h6 class="font-weight-bold">45%</h6>
                                 </div>
                                 <div class="progress">
@@ -253,35 +250,35 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <ul class="nav nav-pills rounded border border-2 border-primary mb-5">
                         <li class="nav-item w-50">
-                            <button class="nav-link w-100 py-3 fs-5 active" data-bs-toggle="pill" href="#tab-1">Penghargaan</button>
+                            <button class="nav-link w-100 py-3 fs-5 active" data-bs-toggle="pill" href="#tab-1">Achievment</button>
                         </li>
                         <li class="nav-item w-50">
-                            <button class="nav-link w-100 py-3 fs-5" data-bs-toggle="pill" href="#tab-2">Pernah Belajar</button>
+                            <button class="nav-link w-100 py-3 fs-5" data-bs-toggle="pill" href="#tab-2">Education</button>
                         </li>
                     </ul>
                     <div class="tab-content">
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>Lomba Ngambek Se-Kabupaten</h5>
+                                    <h5>Ngambek Se-Kabupaten</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2023</p>
                                     <h6 class="mb-0">Audisi Bogor Hujan </h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Lomba Makan Seblak ASIA</h5>
+                                    <h5>Seblak Se-ASIA</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2023</p>
                                     <h6 class="mb-0">ASIA Seblak Eating Contest</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Lomba Boros Se-Kecamatan</h5>
+                                    <h5>Boros Se-Kecamatan</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2022</p>
                                     <h6 class="mb-0">Foya-Foya Audition Cileungsi</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Penghargaan Nobel</h5>
+                                    <h5>Nobel</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2003</p>
                                     <h6 class="mb-0">Orang Baik di Muka Bumi</h6>
@@ -320,7 +317,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-fluid bg-light my-5 py-6" id="service">
+    <!-- <div class="container-fluid bg-light my-5 py-6" id="service">
         <div class="container">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
@@ -381,7 +378,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Service End -->
 
 
@@ -466,7 +463,7 @@
         <div class="container">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
-                    <h1 class="display-5 mb-0">Team Members</h1>
+                    <h1 class="display-5 mb-0">Friendship</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
                     <a class="btn btn-primary py-3 px-5" href="">Contact Us</a>
@@ -518,7 +515,7 @@
     <!-- Testimonial Start -->
     <div class="container-fluid bg-light py-5 my-5" id="testimonial">
         <div class="container-fluid py-5">
-            <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Testimonial</h1>
+            <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Greetings</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 d-none d-lg-block">
                     <div class="testimonial-left h-100">
@@ -581,7 +578,7 @@
 
 
     <!-- Contact Start -->
-    <div class="container-xxl pb-5" id="contact">
+    <!-- <div class="container-xxl pb-5" id="contact">
         <div class="container py-5">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
@@ -646,12 +643,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Contact End -->
 
 
     <!-- Map Start -->
-    <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
+    <!-- <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container-xxl pt-5 px-0">
             <div class="bg-dark">
                 <iframe
@@ -660,7 +657,7 @@
                 tabindex="0"></iframe>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Map End -->
 
 
