--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="d-flex align-items-center pt-5">
                         <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
+                            data-src="https://www.youtube.com/embed/WJ3-F02-F_Y" data-bs-target="#videoModal">
                             <span></span>
                         </button>
                         <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
@@ -166,11 +166,11 @@
                         <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">152</h2>
                     </div>
                     <p class="mb-4">Teman-teman lani yang beruntung, terima kasih telah menjadi teman sejati dalam segala hal. Hidup ini lebih indah berkat kehadiran kalian. Semoga persahabatan kalian terus berlangsung.</p>
-                    <div class="d-flex align-items-center mb-3">
+                    <!-- <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
                         <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">9999</h2>
                     </div>
-                    <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
+                    <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p> -->
                 </div>
             </div>
         </div>
