--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/lani/profile/profile (1).jpg" alt="">
+                    <img class="img-fluid" src="img/profile.png" alt="">
+<!--                     <img class="img-fluid" src="img/lani/profile/profile (1).jpg" alt=""> -->
                 </div>
             </div>
         </div>
