--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Semoga Panjang Umur, Sehat Selalu, Tetap Cantik, Tetap Manis, Tetap Rendah Hati</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://www.youtube.com/watch?v=ggx__Zh9tPo" download class="btn btn-primary py-3 px-4 me-5">Link Video</a>
+                        <a href="https://www.youtube.com/watch?v=ggx__Zh9tPo" download class="btn btn-primary py-3 px-4 me-5">Video On YouTube</a>
 
                         <!-- <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a> -->
                         <button type="button" class="btn-play" data-bs-toggle="modal"
@@ -114,8 +114,10 @@
                 <div class="modal-body">
                     <!-- 16:9 aspect ratio -->
                     <div class="ratio ratio-16x9">
-                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            allow="autoplay"></iframe>
+                         <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
+                            ></iframe>
+<!--                         <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
+                            allow="autoplay"></iframe> -->
                     </div>
                 </div>
             </div>
