--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
                 <div class="modal-body">
                     <!-- 16:9 aspect ratio -->
                     <div class="ratio ratio-16x9">
-                         <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            ></iframe>
-<!--                         <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            allow="autoplay"></iframe> -->
+                         
+                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
+                            allow="autoplay"></iframe>
                     </div>
                 </div>
             </div>
